# preClinVar

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  codecov.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: black.yml  dockerhub_prod_push.yml  dockerhub_stage_push.yml  keep_changelog.yml  lint.yml  test_n_coverage.yml  vulture.yml
preClinVar/: build.py  constants.py  csv_parser.py  file_parser.py  main.py  parse.py  validate.py
preClinVar/demo/: CaseData.csv  CaseData_before_221121.csv  CaseData_sv.csv  SUB9282350_2022-06-28.CaseData.csv  SUB9282350_2022-06-28.Variant.csv  Variant_accession.csv  Variant_snv_hgvs.csv  Variant_sv_range_coords.csv  __init__.py  appo.json  delete_submission_example.json  sample_clinical_significance_hgvs_submission.json  sample_oncogenicity_hgvs.json  submission.json  submission_before_20221121.json  submission_wrong.json
preClinVar/resources/: __init__.py  somatic_submission_schema.json  submission.json  submission_schema.json
preclinvar/: constants.py  file_parser.py  main.py  validate.py
preclinvar/demo/: Variant_snv_hgvs.csv  Variant_sv_breakpoints.csv  sample_clinical_significance_hgvs_submission.json
submission_schemas/: submission.json
tests/: test_file_parser.py  test_main.py  test_validate.py
