[tool.poetry]
name = "preClinVar"
version = "0.1.0"
description = "A ClinVar API submission helper written in FastAPI"
authors = ["Chiara Rasi <rasi.chiara@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
gunicorn = "^20.1.0"
isort = "^5.10.1"
black = "^22.6.0"
python-multipart = "^0.0.5"
jsonschema = "^4.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
requests = "^2.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
