[tool.poetry]
name = "preClinVar"
version = "2.5.1"
description = "A ClinVar API submission helper written in FastAPI"
authors = ["Chiara Rasi <rasi.chiara@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.110.0"
uvicorn = "^0.18.2"
gunicorn = "^20.1.0"
isort = "^5.10.1"
black = "^22.6.0"
python-multipart = "^0.0.7"
jsonschema = "^4.21.1"
responses = "^0.21.0"
httpx = "^0.27.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
requests = "^2.28.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"