[tool.poetry]
name = "preclinvar"
version = "2.7.1"
description = "A ClinVar API submission helper written in FastAPI"
authors = ["Chiara Rasi <rasi.chiara@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.115.2"
uvicorn = "^0.18.2"
gunicorn = "^23.0.0"
isort = "^5.10.1"
python-multipart = "^0.0.7"
jsonschema = "^4.21.1"
responses = "^0.21.0"
httpx = "^0.27.0"
setuptools = "^71.0.1"
importlib-resources = "^6.4.0"
zipp = "^3.20.2"
urllib3 = "^2.2.3"
requests = "^2.32.3"
idna = "^3.10"
platformdirs = "^4.3.6"
certifi = "2024.07.04"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
requests = "^2.28.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"